comments on minimal bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "baboscos"
 version = "0.1.0"
 edition = "2018"
 
+# disabled stack unwinding on panic
 [profile.dev]
 panic = "abort"
-
 [profile.release]
 panic = "abort"
 
